# crypto-ai-bot

./: .claude.json  .gitignore  AGENTS.md  CLAUDE.md  RTK.md  _test_scenarios.py  agents.py  ai_context.py  analyze_perms.py  analyze_perms2.py  backtest.py  check_entry.py  check_keys.py  config.live.yaml  config.paper.test.yaml  config.yaml  dashboard_server.py  dashboard_v3_premium.html  debug_balance.py  demo.py  execution.py  execution_factory.py  execution_shared.py  fix_long_lines.py  futures_execution.py  index.html  indicators.py  learning_state.json  main.py  market_data.py  ml_optimizer.py  news_data.py  patch_gauge.py  performance_gate.py  pyproject.toml  requirements.txt  run_demo.ps1  run_live.ps1  spot_execution.py  temp_indicators.txt  (+6 more)
.clinerules/: caveman.md
ai/: __init__.py  context.py  orchestrator.py
ai_context/: README.md
backtest/: __init__.py  engine.py
bot/: __init__.py
config/: __init__.py  loader.py  schema.py
core/: __init__.py  ai_gates.py  bot_loop.py  session.py  signal_gates.py  singles.py  snapshot.py  startup.py  synthetic_data.py
dashboard/: __init__.py  server.py
docs/: architecture_coupling_map.md  backtesting.md  bot_context.md  live_runtime_map.md
execution/: __init__.py  base.py  factory.py  futures.py  paper.py  spot.py
indicators/: __init__.py  calc.py  helpers.py  legacy.py  location.py  mtf.py  signal.py  smc.py
market/: __init__.py  data.py  news.py  state_types.py
ml/: __init__.py  optimizer.py
safety/: __init__.py  gate.py  sr_wall.py
tests/: check_entry.py  debug_balance.py  get_or_models.py  (+9 more)
(+52 files in other folders)
