[project]
name = "crypto-ai-bot"
version = "4.2.0"
description = "Institutional crypto trading bot with AI/ML signal generation"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".claude",
    "__pycache__",
    "scratch",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "check_*.py"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["\.claude/", "__pycache__/", "scratch/"]
